# buaa-ase_WordChain

./: CMakeLists.txt  README.md  src.cpp
guisrc/: InputView.py  MainView.py  OptionView.py  OutputView.py  Process.py  WarningView.py  main.py
src/: core.cpp  core.h  main.cpp  main.h  output.txt  src.cpp  testfile.txt
test/: gtest.cpp
test/CliTests/: chain.py  chain.txt  circle.txt  config1.txt  config10.txt  config11.txt  config12.txt  config13.txt  config14.txt  config15.txt  config16.txt  config17.txt  config18.txt  config19.txt  config2.txt  config20.txt  config21.txt  config22.txt  config23.txt  config24.txt  config25.txt  config26.txt  config27.txt  config29.txt  config3.txt  config30.txt  config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt  long.txt
test/CoreTests/: testfile10.txt  testfile11.txt  testfile13.txt  testfile16.txt  testfile2.txt  testfile20.txt  testfile21.txt  testfile22.txt  testfile23.txt  testfile24.txt  testfile26.txt  testfile27.txt  testfile28.txt  testfile29.txt  testfile3.txt  testfile30.txt  testfile31.txt  testfile32.txt  testfile33.txt  testfile34.txt  testfile4.txt  testfile6.txt  testfile9.txt
test/testfiles/: testfile1.txt  testfile12.txt  testfile14.txt  testfile15.txt  testfile17.txt  testfile18.txt  testfile19.txt  testfile2.txt  testfile25.txt  testfile3.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile8.txt
